crates/syntax/tests/snapshots/parser__parser_unary binops.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..11,
        statements: StatementList {
            span: 0..11,
            statements: [],
            tail: Some(
                ExpressionStatement {
                    span: 0..11,
                    attributes: [],
                    expression: BinaryOperation(
                        BinaryOperation {
                            span: 0..11,
                            lhs: UnaryOperation(
                                UnaryOperation {
                                    span: 0..4,
                                    operation: Minus,
                                    rhs: ArrayList(
                                        ArrayListExpression {
                                            span: 1..4,
                                            items: [
                                                ArrayItem {
                                                    span: 2..3,
                                                    leading_comment: None,
                                                    expression: Literal(
                                                        Integer(
                                                            IntegerLiteral {
                                                                span: 2..3,
                                                                value: 1,
                                                            },
                                                        ),
                                                    ),
                                                    trailing_comment: None,
                                                },
                                            ],
                                            ty: None,
                                        },
                                    ),
                                },
                            ),
                            operation: NotEqual,
                            rhs: ArrayList(
                                ArrayListExpression {
                                    span: 8..11,
                                    items: [
                                        ArrayItem {
                                            span: 9..10,
                                            leading_comment: None,
                                            expression: Literal(
                                                Integer(
                                                    IntegerLiteral {
                                                        span: 9..10,
                                                        value: 1,
                                                    },
                                                ),
                                            ),
                                            trailing_comment: None,
                                        },
                                    ],
                                    ty: None,
                                },
                            ),
                        },
                    ),
                },
            ),
            tail_comment: None,
        },
    },
)
