crates/syntax/tests/snapshots/parser__parser_unary.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..6,
        statements: StatementList {
            span: 0..6,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [],
            tail: Some(
                Expression(
                    ExpressionStatement {
                        span: 0..6,
                        extras: ItemExtras {
                            leading: [],
                            trailing: [],
                        },
                        attributes: [],
                        expression: UnaryOperation(
                            UnaryOperation {
                                span: 0..6,
                                extras: ItemExtras {
                                    leading: [],
                                    trailing: [],
                                },
                                operation: UnaryOperator {
                                    span: 0..1,
                                    operation: Not,
                                },
                                rhs: QualifiedName(
                                    QualifiedName {
                                        span: 1..6,
                                        extras: ItemExtras {
                                            leading: [],
                                            trailing: [],
                                        },
                                        parts: [
                                            Identifier {
                                                span: 1..6,
                                                name: "input",
                                            },
                                        ],
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ),
        },
    },
)
