crates/syntax/tests/snapshots/parser__parser_unclosed string.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Err(
    [
        ParseError {
            span: 5..20,
            error: unclosed string at 5..20,
        },
    ],
)
