crates/syntax/tests/snapshots/parser__parser_untypable.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..12,
        statements: StatementList {
            span: 0..12,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [
                Assignment(
                    Assignment {
                        span: 0..11,
                        extras: ItemExtras {
                            leading: [],
                            trailing: [],
                        },
                        doc: None,
                        attributes: [],
                        visibility: None,
                        qualifier: None,
                        name: Identifier {
                            span: 0..1,
                            name: "b",
                        },
                        ty: None,
                        value: Literal(
                            Literal {
                                extras: ItemExtras {
                                    leading: [],
                                    trailing: [],
                                },
                                literal: Error(
                                    LiteralError {
                                        span: 8..11,
                                        kind: Untypable,
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ],
            tail: None,
        },
    },
)
