crates/syntax/tests/snapshots/parser__parser_use.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..8,
        statements: StatementList {
            span: 0..8,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [
                Use(
                    UseStatement {
                        span: 0..7,
                        attributes: [],
                        keyword_span: 0..3,
                        extras: ItemExtras {
                            leading: [],
                            trailing: [],
                        },
                        visibility: None,
                        name: UseName {
                            span: 4..7,
                            extras: ItemExtras {
                                leading: [],
                                trailing: [],
                            },
                            parts: [
                                Identifier(
                                    Identifier {
                                        span: 4..7,
                                        name: "foo",
                                    },
                                ),
                            ],
                        },
                        use_as: None,
                    },
                ),
            ],
            tail: None,
        },
    },
)
