crates/syntax/tests/snapshots/parser__string-2.snap
---
source: crates/syntax/tests/parser.rs
expression: "lex(r#\"a = \"plain string int expression\" + 1\"#)"
---
Ok(
    [
        SpannedToken {
            span: 0..1,
            token: Identifier(
                "a",
            ),
        },
        SpannedToken {
            span: 2..3,
            token: OperatorAssignment,
        },
        SpannedToken {
            span: 32..33,
            token: LiteralString(
                [
                    SpannedToken {
                        span: 5..32,
                        token: Content(
                            "plain string int expression",
                        ),
                    },
                ],
            ),
        },
        SpannedToken {
            span: 34..35,
            token: OperatorAdd,
        },
        SpannedToken {
            span: 36..37,
            token: LiteralInt(
                "1",
            ),
        },
    ],
)
