crates/syntax/tests/snapshots/parser__string-3.snap
---
source: crates/syntax/tests/parser.rs
expression: "lex(r#\"\"string {{ with }} escaped bracket\"\"#)"
---
Ok(
    [
        SpannedToken {
            span: 34..35,
            token: LiteralString(
                [
                    SpannedToken {
                        span: 1..8,
                        token: Content(
                            "string ",
                        ),
                    },
                    SpannedToken {
                        span: 8..10,
                        token: EscapedCurlyOpen,
                    },
                    SpannedToken {
                        span: 10..16,
                        token: Content(
                            " with ",
                        ),
                    },
                    SpannedToken {
                        span: 16..18,
                        token: EscapedCurlyClose,
                    },
                    SpannedToken {
                        span: 18..34,
                        token: Content(
                            " escaped bracket",
                        ),
                    },
                ],
            ),
        },
    ],
)
