crates/syntax/tests/snapshots/parser__string-4.snap
---
source: crates/syntax/tests/parser.rs
expression: "lex(r#\"\"string \\\" with \\\" escaped \\ quotes\"\"#)"
---
Ok(
    [
        SpannedToken {
            span: 35..36,
            token: LiteralString(
                [
                    SpannedToken {
                        span: 1..8,
                        token: Content(
                            "string ",
                        ),
                    },
                    SpannedToken {
                        span: 8..10,
                        token: Escaped(
                            "\\\"",
                        ),
                    },
                    SpannedToken {
                        span: 10..16,
                        token: Content(
                            " with ",
                        ),
                    },
                    SpannedToken {
                        span: 16..18,
                        token: Escaped(
                            "\\\"",
                        ),
                    },
                    SpannedToken {
                        span: 18..27,
                        token: Content(
                            " escaped ",
                        ),
                    },
                    SpannedToken {
                        span: 27..28,
                        token: BackSlash,
                    },
                    SpannedToken {
                        span: 28..35,
                        token: Content(
                            " quotes",
                        ),
                    },
                ],
            ),
        },
    ],
)
