crates/syntax/tests/snapshots/parser__string-5.snap
---
source: crates/syntax/tests/parser.rs
expression: "lex(r#\"\"string {with} expression\"\"#)"
---
Ok(
    [
        SpannedToken {
            span: 25..26,
            token: LiteralString(
                [
                    SpannedToken {
                        span: 1..8,
                        token: Content(
                            "string ",
                        ),
                    },
                    SpannedToken {
                        span: 13..14,
                        token: FormatStart(
                            (
                                [
                                    SpannedToken {
                                        span: 9..13,
                                        token: Identifier(
                                            "with",
                                        ),
                                    },
                                ],
                                [],
                            ),
                        ),
                    },
                    SpannedToken {
                        span: 14..25,
                        token: Content(
                            " expression",
                        ),
                    },
                ],
            ),
        },
    ],
)
